started browser localization; added German localization
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@206 80473309-fabf-408f-887a-d98baf40245d

--- a/browser/About.resx
+++ b/browser/About.resx
@@ -117,7 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="richTextBox1.Text" xml:space="preserve">
+    <value>Programming
+Brad Farris ("BradDaBug")
+
+Localization
+
+German
+Sebastian Seefried ("Bambam")
+
+GK3 is property of Activision Blizzard. This project is not associated with or endorsed by Activision Blizzard in any way.</value>
+  </data>
 </root>
