--- a/browser/Strings.resx
+++ b/browser/Strings.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,7 +117,151 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="AboutCopyright1" xml:space="preserve">
+    <value>Copyright 2009 Brad Farris</value>
+  </data>
+  <data name="AboutCopyright2" xml:space="preserve">
+    <value>Licensed under the GNU GPL</value>
+  </data>
+  <data name="AboutCredits" xml:space="preserve">
+    <value>Credits</value>
+  </data>
+  <data name="AboutLink" xml:space="preserve">
+    <value>http://gk3tools.sourceforge.net</value>
+  </data>
+  <data name="AboutTitle" xml:space="preserve">
+    <value>Gabriel Knight 3 Barn Browser</value>
+  </data>
+  <data name="AboutVersion" xml:space="preserve">
+    <value>Version</value>
+  </data>
+  <data name="CompressionNone" xml:space="preserve">
+    <value>None</value>
+  </data>
+  <data name="ListBarn" xml:space="preserve">
+    <value>Barn</value>
+  </data>
+  <data name="ListCompression" xml:space="preserve">
+    <value>Compression</value>
+  </data>
+  <data name="ListFilename" xml:space="preserve">
+    <value>File name</value>
+  </data>
+  <data name="ListSize" xml:space="preserve">
+    <value>Size</value>
+  </data>
+  <data name="ListType" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="MainMenuAbout" xml:space="preserve">
+    <value>About</value>
+  </data>
+  <data name="MainMenuConvertBitmaps" xml:space="preserve">
+    <value>Convert bitmaps</value>
+  </data>
+  <data name="MainMenuDecompress" xml:space="preserve">
+    <value>Decompress files</value>
+  </data>
+  <data name="MainMenuExit" xml:space="preserve">
+    <value>Exit</value>
+  </data>
+  <data name="MainMenuExtractAllBitmaps" xml:space="preserve">
+    <value>Extract all bitmaps</value>
+  </data>
+  <data name="MainMenuExtractAllDocs" xml:space="preserve">
+    <value>Extract all docs</value>
+  </data>
+  <data name="MainMenuExtractAllHtml" xml:space="preserve">
+    <value>Extract all HTML files</value>
+  </data>
+  <data name="MainMenuExtractAllWavs" xml:space="preserve">
+    <value>Extract all wavs</value>
+  </data>
+  <data name="MainMenuExtractSelected" xml:space="preserve">
+    <value>Extract selected files</value>
+  </data>
+  <data name="MainMenuFile" xml:space="preserve">
+    <value>File</value>
+  </data>
+  <data name="MainMenuHelp" xml:space="preserve">
+    <value>Help</value>
+  </data>
+  <data name="MainMenuOpenBarn" xml:space="preserve">
+    <value>Open barn...</value>
+  </data>
+  <data name="MainMenuPreviewFile" xml:space="preserve">
+    <value>Preview file</value>
+  </data>
+  <data name="MainMenuSetExtractionPath" xml:space="preserve">
+    <value>Set extract to path...</value>
+  </data>
+  <data name="MainMenuTools" xml:space="preserve">
+    <value>Tools</value>
+  </data>
+  <data name="TypeAct" xml:space="preserve">
+    <value>ACT file?</value>
+  </data>
+  <data name="TypeAnm" xml:space="preserve">
+    <value>ANM file?</value>
+  </data>
+  <data name="TypeBmp" xml:space="preserve">
+    <value>Bitmap</value>
+  </data>
+  <data name="TypeBsp" xml:space="preserve">
+    <value>Room geometry</value>
+  </data>
+  <data name="TypeCur" xml:space="preserve">
+    <value>Cursor</value>
+  </data>
+  <data name="TypeDoc" xml:space="preserve">
+    <value>Word document</value>
+  </data>
+  <data name="TypeExe" xml:space="preserve">
+    <value>Executable</value>
+  </data>
+  <data name="TypeFon" xml:space="preserve">
+    <value>Font</value>
+  </data>
+  <data name="TypeGas" xml:space="preserve">
+    <value>GAS file?</value>
+  </data>
+  <data name="TypeHtml" xml:space="preserve">
+    <value>HTML document</value>
+  </data>
+  <data name="TypeMod" xml:space="preserve">
+    <value>Model geometry</value>
+  </data>
+  <data name="TypeMom" xml:space="preserve">
+    <value>MOM file?</value>
+  </data>
+  <data name="TypeMul" xml:space="preserve">
+    <value>Room lightmap</value>
+  </data>
+  <data name="TypeNvc" xml:space="preserve">
+    <value>Noun-verb-case file</value>
+  </data>
+  <data name="TypeScn" xml:space="preserve">
+    <value>Scene definition</value>
+  </data>
+  <data name="TypeSeq" xml:space="preserve">
+    <value>SEQ file?</value>
+  </data>
+  <data name="TypeShp" xml:space="preserve">
+    <value>Sheep script</value>
+  </data>
+  <data name="TypeSif" xml:space="preserve">
+    <value>Scene initialization</value>
+  </data>
+  <data name="TypeStk" xml:space="preserve">
+    <value>Sound track file</value>
+  </data>
+  <data name="TypeTxt" xml:space="preserve">
+    <value>Text document</value>
+  </data>
+  <data name="TypeWav" xml:space="preserve">
+    <value>WAV audio</value>
+  </data>
+  <data name="TypeYak" xml:space="preserve">
+    <value>YAK file</value>
+  </data>
 </root>
