--- a/browser/Strings.ru-RU.resx
+++ b/browser/Strings.ru-RU.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,21 +117,145 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="richTextBox1.Text" xml:space="preserve">
-    <value>Programming
-Brad Farris ("BradDaBug")
-
-Localization
-
-German
-Sebastian Seefried ("Bambam")
-
-French
-Romain "Orc"
-
-Russian
-Boris Belchikhin
-
-GK3 is property of Activision Blizzard. This project is not associated with or endorsed by Activision Blizzard in any way.</value>
+  <data name="AboutCopyright1" xml:space="preserve">
+    <value>Copyright 2009 Brad Farris</value>
+  </data>
+  <data name="AboutCopyright2" xml:space="preserve">
+    <value>По лицензии GNU GPL</value>
+  </data>
+  <data name="AboutCredits" xml:space="preserve">
+    <value>Credits</value>
+  </data>
+  <data name="AboutVersion" xml:space="preserve">
+    <value>Версия</value>
+  </data>
+  <data name="CompressionNone" xml:space="preserve">
+    <value>Без изменений</value>
+  </data>
+  <data name="ListBarn" xml:space="preserve">
+    <value>Барн</value>
+  </data>
+  <data name="ListCompression" xml:space="preserve">
+    <value>Сжатие</value>
+  </data>
+  <data name="ListFilename" xml:space="preserve">
+    <value>Имя файла</value>
+  </data>
+  <data name="ListSize" xml:space="preserve">
+    <value>Размер</value>
+  </data>
+  <data name="ListType" xml:space="preserve">
+    <value>Тип</value>
+  </data>
+  <data name="MainMenuAbout" xml:space="preserve">
+    <value>Справка</value>
+  </data>
+  <data name="MainMenuConvertBitmaps" xml:space="preserve">
+    <value>Конвертировать битмап изображения</value>
+  </data>
+  <data name="MainMenuDecompress" xml:space="preserve">
+    <value>Разархивировать файлы</value>
+  </data>
+  <data name="MainMenuExit" xml:space="preserve">
+    <value>Выход</value>
+  </data>
+  <data name="MainMenuExtractAllBitmaps" xml:space="preserve">
+    <value>Извлечь все битмап изображения</value>
+  </data>
+  <data name="MainMenuExtractAllDocs" xml:space="preserve">
+    <value>Извлечь все текстовые файлы</value>
+  </data>
+  <data name="MainMenuExtractAllHtml" xml:space="preserve">
+    <value>Извлечь все html файлы</value>
+  </data>
+  <data name="MainMenuExtractAllWavs" xml:space="preserve">
+    <value>Извлечь все звуковые файлы</value>
+  </data>
+  <data name="MainMenuExtractSelected" xml:space="preserve">
+    <value>Извлечь выбранные файлы</value>
+  </data>
+  <data name="MainMenuFile" xml:space="preserve">
+    <value>Файл</value>
+  </data>
+  <data name="MainMenuHelp" xml:space="preserve">
+    <value>Помощь</value>
+  </data>
+  <data name="MainMenuOpenBarn" xml:space="preserve">
+    <value>Открыть барн...</value>
+  </data>
+  <data name="MainMenuPreviewFile" xml:space="preserve">
+    <value>Предварительный просмотр файла</value>
+  </data>
+  <data name="MainMenuSetExtractionPath" xml:space="preserve">
+    <value>Сохранить извлеченное в...</value>
+  </data>
+  <data name="MainMenuTools" xml:space="preserve">
+    <value>Инструменты</value>
+  </data>
+  <data name="TypeAct" xml:space="preserve">
+    <value>ACT Файл</value>
+  </data>
+  <data name="TypeAnm" xml:space="preserve">
+    <value>ANM Файл</value>
+  </data>
+  <data name="TypeBmp" xml:space="preserve">
+    <value>Растровое изображение</value>
+  </data>
+  <data name="TypeBsp" xml:space="preserve">
+    <value>Геометрия окружения</value>
+  </data>
+  <data name="TypeCur" xml:space="preserve">
+    <value>Курсор</value>
+  </data>
+  <data name="TypeDoc" xml:space="preserve">
+    <value>Документ Microsoft Word</value>
+  </data>
+  <data name="TypeExe" xml:space="preserve">
+    <value>Приложение</value>
+  </data>
+  <data name="TypeFon" xml:space="preserve">
+    <value>Шрифт</value>
+  </data>
+  <data name="TypeGas" xml:space="preserve">
+    <value>GAS Файл</value>
+  </data>
+  <data name="TypeHtml" xml:space="preserve">
+    <value>HTML документ</value>
+  </data>
+  <data name="TypeMod" xml:space="preserve">
+    <value>Геометрия модели</value>
+  </data>
+  <data name="TypeMom" xml:space="preserve">
+    <value>MOM Файл</value>
+  </data>
+  <data name="TypeMul" xml:space="preserve">
+    <value>Лайтмап окружения</value>
+  </data>
+  <data name="TypeNvc" xml:space="preserve">
+    <value>Изменяемый игровой объект</value>
+  </data>
+  <data name="TypeScn" xml:space="preserve">
+    <value>Распознание сцены</value>
+  </data>
+  <data name="TypeSeq" xml:space="preserve">
+    <value>SEQ Файл</value>
+  </data>
+  <data name="TypeShp" xml:space="preserve">
+    <value>Sheep скрипт</value>
+  </data>
+  <data name="TypeSif" xml:space="preserve">
+    <value>Инициализация сцены</value>
+  </data>
+  <data name="TypeStk" xml:space="preserve">
+    <value>Саундтрек</value>
+  </data>
+  <data name="TypeTxt" xml:space="preserve">
+    <value>Текстовый документ</value>
+  </data>
+  <data name="TypeWav" xml:space="preserve">
+    <value>Звуковой файл WAV</value>
+  </data>
+  <data name="TypeYak" xml:space="preserve">
+    <value>YAK Файл</value>
   </data>
 </root>
