still getting ready for release
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@248 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/CHANGELOG.txt
+++ b/sheep/CHANGELOG.txt
@@ -1,5 +1,9 @@
 SheepC and libsheep Changelog
 -----------------------------
 
+0.2.0 (2009-11-06)
+    Lots of bug fixes
+    Initial support for "waiting"
+
 0.1.0 (2008-12-20)
     Initial release
